<?xml version="1.0"?>
<package format="2">
    <name>fixposition_driver</name>
    <version>1.2.0</version>
    <description>Fixposition ROS Driver</description>

    <maintainer email="kailin.huang@fixposition.com">Kailin Huang</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
</package>
