<?xml version="1.0"?>
<package format="2">
    <name>fixposition_driver</name>
    <version>4.4.0</version>
    <description>Fixposition ROS Driver</description>

    <maintainer email="info@fixposition.com">Fixposition AG</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>fixposition_gnss_tf</depend>
</package>
