<?xml version="1.0"?>
<package format="3">
    <name>fixposition_driver_lib</name>
    <version>5.0.0</version>
    <description>Fixposition ROS Driver Lib</description>

    <maintainer email="info@fixposition.com">Fixposition AG</maintainer>

    <license>MIT</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>fixposition_gnss_tf</depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>
