<?xml version="1.0"?>
<package format="3">
    <name>fixposition_driver_msgs</name>
    <version>8.1.0</version>
    <description>Fixposition ROS driver messages</description>
    <maintainer email="support@fixposition.com">Fixposition Support</maintainer>
    <license>MIT</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

    <build_depend>ros_environment</build_depend>
    <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
    <build_depend condition="$ROS_VERSION == 2">builtin_interfaces</build_depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>fixposition_driver_lib</depend>
    <depend>fpsdk_common</depend>
    <depend condition="$ROS_VERSION == 1">fpsdk_ros1</depend>
    <depend condition="$ROS_VERSION == 2">fpsdk_ros2</depend>

    <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
    <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

    <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
