<?xml version="1.0"?>
<package format="2">
    <name>fixposition_driver_ros1</name>
    <version>5.0.0</version>
    <description>Fixposition ROS Driver</description>

    <maintainer email="info@fixposition.com">Fixposition AG</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>fixposition_driver_lib</depend>
    <depend>rtcm_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
</package>
