<?xml version="1.0"?>
<package format="3">
    <name>fixposition_driver_ros2</name>
    <version>5.0.0</version>
    <description>Fixposition ROS Driver</description>

    <maintainer email="info@fixposition.com">Fixposition AG</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>rclcpp</exec_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <build_depend>builtin_interfaces</build_depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>fixposition_gnss_tf</depend>
    <depend>fixposition_driver_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
